--- a/mind-parent/pom.xml
+++ b/mind-parent/pom.xml
@@ -172,7 +172,7 @@
 
                 <plugin>
                     <artifactId>maven-assembly-plugin</artifactId>
-                    <version>2.2-beta-5</version>
+                    <version>2.4</version>
                 </plugin>
 
                 <!-- Test coverage -->
